Route and dynamic theme managers added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   get: ^3.8.0
+  get_storage: ^1.3.0
 
 dev_dependencies:
   flutter_test:
